@@ -5,6 +5,9 @@
 
 v0.14.2 (??.07.2014)
  * New method model_Base::setTableName(). Thanks to Christian Riesche!
+ * Support for attachments in tx_rnbase_util_Mail. Works for T3 versions < 4.5 
+ * basic data model with generic getters, setters. Thanks to Michael Wagner!
+ * New label debug in BaseMarker.
 
 v0.14.1 (26.04.2014)
  * Changes to apply code conventions
